# N.E.K.O

./: .gitignore  README.MD  agent_server.py  launcher.py  main_server.py  memory_server.py  monitor.py  neko.code-workspace  pyproject.toml  requirements.txt
brain/: mcp_client.py  task_executor.py
config/: __init__.py  api_providers.json  prompts_chara.py  prompts_sys.py
docs/: README_en.md  README_ja.md
frontend/: package.json  tsconfig.json  vite.web.config.ts
main_helper/: core.py  cross_server.py  omni_offline_client.py  omni_realtime_client.py  tts_helper.py  user_plugin_server.py
main_logic/: core.py  omni_realtime_client.py  tts_client.py
main_routers/: characters_router.py  config_router.py  live2d_router.py  memory_router.py  pages_router.py  system_router.py  vrm_router.py  websocket_router.py  workshop_router.py
mcp_server/: server.py  servers.json
memory/: settings.py
plugin/: PLUGIN_DEVELOPMENT_GUIDE.md  __init__.py  export_frontend.sh  load_test_client.py  plugin_base.py  plugin_system_analysis_report.md  settings.py  status.py  update_imports.py  user_plugin_server.py  user_plugin_server.py.backup  zeromq_ipc.py
plugin/plugins/timer_service/: main.py  plugin.toml  pyproject.toml
plugin/plugins/web_interface/: __init__.py  plugin.toml  pyproject.toml
specs/: launcher.spec  monitor_build.spec
static/: app.js  audio-loader.js  common_ui.js  i18n-i18next.js  live2d-core.js  live2d-emotion.js  live2d-init.js  live2d-interaction.js  live2d-model.js  live2d-ui-buttons.js  live2d-ui-drag.js  live2d-ui-popup.js  live2d-ui.js  vrm-core.js  (+5 more)
(+159 files in other folders)
