[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neko-plugin-timer-service"
version = "1.0.0"
description = "N.E.K.O timer service plugin"
requires-python = ">=3.11,<3.13"
dependencies = [
  "N.E.K.O",
]

[tool.uv.sources]
"N.E.K.O" = { path = "../../..", editable = true }
