[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neko-plugin-web-interface"
version = "1.0.0"
description = "N.E.K.O web interface plugin"
requires-python = ">=3.11,<3.13"
dependencies = [
  "N.E.K.O",
  "fastapi",
  "uvicorn",
]

[tool.uv.sources]
"N.E.K.O" = { path = "../../..", editable = true }
